--- a/package.json
+++ b/package.json
@@ -17,9 +17,20 @@
   },
   "homepage": "https://github.com/LukaszKorzybski/poc-expressjs-mvc",
   "dependencies": {
-    "express": "^4.13.0"
+    "body-parser": "^1.13.1",
+    "dustjs-linkedin": "^2.7.2",
+    "express": "~4.13.0",
+    "express-form": "^0.12.4",
+    "klei-dust": "^1.0.0",
+    "lodash": "^3.9.3",
+    "unirest": "^0.4.2",
+    "validator": "^3.40.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.1",
     "jasmine": "^2.3.1"
   }
 }
