--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-form": "^0.12.4",
     "klei-dust": "^1.0.0",
     "lodash": "^3.9.3",
+    "node-custom-errors": "^0.1.5",
     "unirest": "^0.4.2",
     "validator": "^3.40.1"
   },
