--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.5.1",
+    "grunt-jasmine-nodejs": "^1.4.2",
     "jasmine": "^2.3.1"
   }
 }
