--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.5.1",
     "grunt-jasmine-nodejs": "^1.4.2",
-    "jasmine": "^2.3.1"
+    "jasmine": "^2.3.1", 
+    "node-inspector": "^0.12.3"
   }
 }
